[gd_scene load_steps=6 format=3 uid="uid://cbi5nmj310fsq"]

[ext_resource type="Texture2D" uid="uid://lfgnll83otbe" path="res://entities/enemies/snail/assets/snail.png" id="1_03g26"]
[ext_resource type="Script" uid="uid://t6cdgwd1m2jm" path="res://entities/enemies/snail/snail.gd" id="2_kwcx3"]
[ext_resource type="PackedScene" uid="uid://cfefgtiidrp6" path="res://ui/components/enemy_health_bar.tscn" id="3_cy87n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_03g26"]
radius = 18.681541

[sub_resource type="CircleShape2D" id="CircleShape2D_kwcx3"]
radius = 22.0

[node name="Snail" type="CharacterBody2D"]
position = Vector2(0, -22)
collision_layer = 4
script = ExtResource("2_kwcx3")
speed = 60.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_03g26")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_03g26")

[node name="FloorRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)

[node name="WallRay" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_kwcx3")

[node name="EnemyHealthBar" parent="." instance=ExtResource("3_cy87n")]
offset_left = -23.0
offset_top = -45.0
offset_right = 17.0
offset_bottom = -35.0
